--- a/styles.css
+++ b/styles.css
@@ -648,6 +648,25 @@ footer {
     }
 }
 
+@media (min-width: 1600px) {
+    .container {
+        max-width: 1600px; /* Expande para telas ultrawide */
+    }
+}
+
+@media (min-width: 1600px) {
+    body {
+        font-size: 18px; /* Aumenta o tamanho do texto */
+    }
+    h1 {
+        font-size: 42px;
+    }
+    h2 {
+        font-size: 34px;
+    }
+}
+
+
 
 /* Estiliza a barra de rolagem */
 ::-webkit-scrollbar {
