--- a/styles.css
+++ b/styles.css
@@ -666,27 +666,8 @@ footer {
     }
 }
 
-@media (min-width: 1600px) {
-    .nav-links {
-        display: none; /* Esconder menu */
-        flex-direction: column;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        background: #fff;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .nav-links.active {
-        display: flex; /* Exibir quando ativado */
-    }
-
-    .menu-toggle {
-        display: block;
-        font-size: 24px;
-        cursor: pointer;
-    }
+input, select, textarea {
+    font-size: 16px;
 }
 
 
